--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.2",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.59.15",
