--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prisma": "^6.16.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.63.0",
     "react-loading-skeleton": "^3.5.0",
     "react-paginate": "^8.2.0",
